[package]
name="vl53l1x-uld"
version="1.0.0"
edition="2021"
authors=["Tom Sievers <tom.sievers13@gmail.com>"]
license="MIT"
description="Library source port of the ULD driver for the VL53L1X"
repository="https://github.com/TomSievers/vl53l1x-rs"
keywords=["vl53l1x"]
readme="README.md"
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal="0.2.7"
vl53l1-reg="0.1.0"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
